# Kartavya-Continual-Learning-Engine-Repo-Aware-ChatBot

./: .gitignore  README.md  directory.txt
Miscellaneous/: Plan_Kartavya_Singh.txt  RepoAware_Chat_Continual_Learning_Brief.md  thoguhts.txt
Miscellaneous/Progress/: Progress_Report_2025-09-13.txt
apps/web/: package-lock.json  package.json
apps/web/src/app/: HomeClient.tsx  page.tsx
apps/web/src/app/api/auth/login/: route.ts
apps/web/src/app/api/auth/logout/: route.ts
apps/web/src/app/api/auth/signup/: route.ts
apps/web/src/app/api/github/callback/: route.ts
apps/web/src/app/api/github/files/: route.ts
apps/web/src/app/api/github/index/: route.ts
apps/web/src/app/api/me/: route.ts
apps/web/src/app/api/search/: route.ts
apps/web/src/app/app/: page.tsx
apps/web/src/app/app/github/: page.tsx
apps/web/src/app/app/settings/: page.tsx
apps/web/src/app/github/placeholder/: page.tsx
apps/web/src/app/lab/: page.tsx
apps/web/src/components/: AuthModal.tsx  GitHubAccountCard.tsx  GitHubConnectCard.tsx  RepoFilesDropdown.tsx
apps/web/src/components/ui/: badge.tsx  tabs.tsx
apps/web/src/lib/: auth.ts  session.ts
infra/: docker-compose.yml
services/brain-python/: Dockerfile  pyproject.toml
services/brain-python/alembic/: env.py
services/brain-python/alembic/versions/: 0001_init.py  0002_constraints_indexes.py  0003_users_auth_fields.py  0004_github_accounts.py  0005_fix_vector_dimension_384.py
services/brain-python/app/: auth.py  db.py  github.py  indexer.py  main.py  repos.py  schemas.py
services/brain-python/app/clients/: github.py
(+6 files in other folders)
