[project]
name = "brain"
version = "0.0.1"
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.2",
  "alembic>=1.13",
  "pgvector>=0.2",
  "passlib[bcrypt]>=1.7.4",
  "bcrypt>=4.0,<4.1",
  "PyJWT>=2.8",
  "email-validator>=2.1",
]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
